<resources>
    <string name="app_name">StateDataCodeTest</string>
    <string name="welcome_to_nready_to_travel">Welcome to\nReady To Travel</string>
    <string name="sign_up_with">Sign up with Facebook for the most fulfilling trip planning experience with us!</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="log_in_with_email_address">Log in with email address</string>
    <string name="todo">TODO</string>
    <string name="almost_there">Almost there!</string>
    <string name="create_description">Complete the from below to create\n your Ready To Travel account.</string>
    <string name="mandatory">*Mandatory</string>
    <string name="first_name">First Name *</string>
    <string name="last_name">Last Name *</string>
    <string name="email_address">Email Address *</string>
    <string name="date_of_birth">Date of Birth *</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="nationality">Nationality *</string>
    <string name="country_of_residence">Country of Residence *</string>
    <string name="mobile_no_optional">Mobile no. (Optional)</string>
    <string name="create_my_account_now">Create my account now</string>
</resources>