<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/welcome3x"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo"/>
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/clouds3x"
        android:scaleType="centerInside"
        android:contentDescription="@string/todo"
        app:layout_constraintTop_toBottomOf="@id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/ivClose"
        android:src="@drawable/ic_close"
        android:contentDescription="@string/todo"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTitle"
        android:layout_margin="@dimen/margin_medium"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/black"
        android:fontFamily="@font/chivobold"
        android:text="@string/welcome_to_nready_to_travel"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvTitleDescription"
        android:text="@string/sign_up_with"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_normal"
        android:fontFamily="@font/chivoregular"
        android:layout_margin="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"/>
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:id="@+id/rl_facebook"
        android:layout_margin="@dimen/margin_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleDescription"
        android:background="@drawable/normal_button_background_card">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_with_facebook"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:textSize="@dimen/text_size_small"
            android:fontFamily="@font/chivobold"
            tools:ignore="RelativeOverlap" />
        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:padding="3dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/com_facebook_button_icon"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:id="@+id/rl_email"
        android:layout_margin="@dimen/margin_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_facebook"
        android:background="@drawable/normal_button_background_card">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_with_email_address"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:textSize="@dimen/text_size_small"
            android:fontFamily="@font/chivobold"
            tools:ignore="RelativeOverlap" />
        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:padding="3dp"
            android:contentDescription="@string/todo"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_email"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:id="@+id/rl_create_new"
        android:layout_margin="@dimen/margin_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_email"
        android:background="@drawable/custom_button_background_card">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_account"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:textSize="@dimen/text_size_small"
            android:fontFamily="@font/chivobold"/>
    </RelativeLayout>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"
        android:id="@+id/guideline1"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"
        android:id="@+id/guideline2"/>
</androidx.constraintlayout.widget.ConstraintLayout>