<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:verticalScrollbarPosition="defaultPosition"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUpFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llTop"
            android:orientation="vertical"
            android:padding="@dimen/margin_small"
            android:background="@color/white_gray_"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_medium"
                android:id="@+id/ivBack"
                android:src="@drawable/ic_back"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_normal"
                android:fontFamily="@font/chivobold"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium"
                android:text="@string/almost_there"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small"
                android:fontFamily="@font/chivoregular"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium"
                android:text="@string/create_description"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small"
                android:fontFamily="@font/chivoregular"
                android:textColor="@color/light_gray"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/mandatory"/>
        </LinearLayout>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:src="@drawable/guitar"
            android:paddingBottom="25dp"
            android:layout_marginEnd="@dimen/margin_medium"
            app:layout_constraintTop_toBottomOf="@id/llTop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/llTop"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tilFirstName"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llTop"
            android:layout_marginTop="@dimen/margin_medium"
            style="@style/TextInputLayoutAppearance"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtFirstName"
                android:hint="@string/first_name"
                android:maxLines="1"
                android:inputType="text"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/black"
                android:fontFamily="@font/chivoregular"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tilLastName"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilFirstName"
            android:layout_marginTop="@dimen/margin_small"
            style="@style/TextInputLayoutAppearance"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtLastName"
                android:hint="@string/last_name"
                android:maxLines="1"
                android:inputType="text"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/black"
                android:fontFamily="@font/chivoregular"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tilEmail"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilLastName"
            android:layout_marginTop="@dimen/margin_small"
            style="@style/TextInputLayoutAppearance"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtEmail"
                android:hint="@string/email_address"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/black"
                android:fontFamily="@font/chivoregular"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline1"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="vertical"/>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:id="@+id/rlBirth"
            android:paddingStart="5dp"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/tilEmail"
            android:layout_marginTop="@dimen/margin_small">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:id="@+id/tvDobHint"
                android:text="@string/date_of_birth"
                android:textColor="@color/light_gray"
                android:textSize="@dimen/text_size_small"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvDateOfBirth"
                android:layout_marginTop="3dp"
                android:layout_centerVertical="true"
                android:text="DD/MM/YYYY"
                android:layout_below="@id/tvDobHint"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/black"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dob"
                android:paddingTop="5dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>


        <RadioGroup
            android:checkedButton="@id/female"
            android:id="@+id/toggle"
            app:layout_constraintTop_toTopOf="@id/rlBirth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline1"
            app:layout_constraintBottom_toBottomOf="@id/rlBirth"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/switch_track"
            android:orientation="horizontal">

            <RadioButton
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginStart="1dp"
                android:id="@+id/female"
                android:background="@drawable/toggle_widget_background"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:text="@string/female"
                android:textColor="@color/btnSecondColor" />

            <RadioButton
                android:layout_marginEnd="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:id="@+id/male"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/toggle_widget_background"
                android:button="@null"
                android:gravity="center"
                android:text="@string/male"
                android:textColor="@color/btnSecondColor" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tilNationality"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rlBirth"
            android:layout_marginTop="@dimen/margin_small"
            style="@style/TextInputLayoutAppearance"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtNation"
                android:hint="@string/nationality"
                android:maxLines="1"
                android:inputType="text"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/black"
                android:fontFamily="@font/chivoregular"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tilCountry"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilNationality"
            android:layout_marginTop="@dimen/margin_small"
            style="@style/TextInputLayoutAppearance"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtCountry"
                android:hint="@string/country_of_residence"
                android:maxLines="1"
                android:inputType="text"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/black"
                android:fontFamily="@font/chivoregular"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tilPhone"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilCountry"
            android:layout_marginTop="@dimen/margin_small"
            style="@style/TextInputLayoutAppearance"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtPhone"
                android:hint="@string/mobile_no_optional"
                android:maxLines="1"
                android:inputType="phone"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/black"
                android:fontFamily="@font/chivoregular"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="8dp"
            android:id="@+id/view"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@color/white_gray_"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilPhone"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:id="@+id/rl_create_now"
            android:layout_margin="@dimen/margin_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view"
            android:background="@drawable/custom_button_background_card">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_my_account_now"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:textSize="@dimen/text_size_small"
                android:fontFamily="@font/chivobold"/>
        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rl_create_now"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>